<resources>
    <string name="app_name">Cash Flow Logger</string>
    <string name="btn_txt_log_income">Log Income</string>
    <string name="btn_txt_log_expenses">Log Expenses</string>
    <string name="btn_txt_view_record">View Record</string>
    <string name="label_balance">Balance</string>
    <string name="dummy_txt_amount">₱ 888,888.88</string>

    <string name="heading_income_detail">Income Logging</string>
    <string name="label_source">From</string>
    <string name="label_amount">Amount</string>
    <string name="hint_source">Source of income</string>
    <string name="btn_txt_allocate_auto">Automatically Allocate</string>
    <string name="btn_txt_allocate_man">Manually Allocate</string>
    <string name="btn_cancel">Cancel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_remaining">Remaining</string>
    <string name="dummy_txt_fund_name">Fund Name</string>
    <string name="btn_allocate">Allocate</string>
    <string name="dummy_source">JAMEREC Industries</string>
    <string name="label_allocation">Allocation</string>
    <string name="btn_edit">Edit</string>
    <string name="hint_amount">XXX,XXX.XX</string>
    <string name="label_fund">Fund</string>
    <string name="btn_done">Done</string>
    <string name="heading_expense_logging">Expense Logging</string>
    <string name="hint_item">E.g. Rice, Fish, etc.</string>
    <string name="label_item">Item</string>
    <string name="label_brand">Brand</string>
    <string name="hint_brand">Brand Name</string>
    <string name="label_price_per_item">Price per Item</string>
    <string name="hint_item_size">E.g. 1kg, 1/2gal., 1order</string>
    <string name="label_quantity">Quantity</string>
    <string name="hint_quantity">Quantity of items</string>
    <string name="label_item_size">Item Size</string>
    <string name="label_total_price">Total Price</string>
    <string name="label_deduct_from">Deduct From</string>
    <string name="label_tags">Tags</string>
    <string name="hint_tags">E.g. food, clothes, utilities</string>
    <string name="dummy_err_msg">This is an error message :p </string>
    <string name="err_msg_from_isEmpty">Please enter the source of income.</string>
    <string name="err_msg_amountIsZero">Income amount cannot be empty/zero.</string>
    <string name="err_msg_amountZero">Amount should not be empty/zero.</string>
    <string name="err_msg_amountTooBig">Amount should not be more than the remaining amount.</string>
    <string name="err_msg_allocationIncomplete">Income amount should all be allocated.</string>
    <string name="dummy_product_tag">Product Tag</string>
    <string name="err_msg_no_set_unit">Packaging size should have unit of measure.</string>
    <string name="err_msg_no_set_value">Packaging size should have numeric value.</string>
    <string name="err_msg_set_size_empty">Packaging size should be indicated.</string>
    <string name="err_msg_item_name_empty">Item name cannot be empty.</string>
    <string name="err_msg_brand_name_empty">Brand name cannot be empty.</string>
    <string name="err_msg_item_price_zero">Item price cannot be empty/zero.</string>
    <string name="err_msg_quantity_zero">Quantity cannot not be empty/zero.</string>
    <string name="err_msg_no_fund_selected">A fund to deduct from must be selected.</string>
    <string name="dummy_detail_item">Pick_up Truck</string>
    <string name="dummy_detail_brand">Lamborghini Urus</string>
    <string name="dummy_size">1unit</string>
    <string name="dummy_quantity">2</string>
    <string name="dummy_total_price">₱ 1,777,777.76</string>
    <string name="dummy_fund">Investment</string>
    <string name="btn_txt_log_expense">Log Expense</string>
    <string name="err_msg_zero_denominator">Fractional value with zero denominator is not allowed</string>
    <string name="err_msg_size_zero">Packaging size should not be zero</string>
    <string name="action_settings">Settings</string>
    <string name="label_remarks">Remarks</string>
    <string name="hint_remarks">Put remarks about this purchase here</string>
    <string name="dummy_remarks">Remarks about this purchased item</string>
    <string name="no_remarks">No Remarks</string>
    <string name="heading_settings">Settings</string>
    <string name="label_user_name">User Name</string>
    <string name="dummy_username">Juan dela Cruz</string>
    <string name="label_password">Password</string>
    <string name="dummy_password">asd123$</string>
    <string name="label_language">Language</string>
    <string name="dummy_language">Esperanto</string>
    <string name="label_currency">Currency</string>
    <string name="dummy_currency">Philippine Peso</string>
    <string name="label_fund_allocation">Fund Allocation</string>
    <string name="label_report">Periodic Report</string>
    <string name="label_daily">Daily</string>
    <string name="colon">:</string>
    <string name="label_weekly">Weekly</string>
    <string name="label_monthly">Monthly</string>
    <string name="btn_save">Save</string>
    <string name="btn_back">Back</string>
    <string name="err_msg_user_name_empty">User name should not be empty</string>
    <string name="hint_user_name">Enter your user name</string>
    <string name="notify_save_done">Settings changed successfully</string>
    <string name="notify_save_failed">Change settings failed</string>
    <string name="heading_change_password">Change Password</string>
    <string name="label_new_password">New Password</string>
    <string name="hint_new_password">Enter new password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_current_password">Current Password</string>
    <string name="hint_confirm_new_password">Re enter new password</string>
    <string name="hint_old_password">Enter the current password</string>
    <string name="err_password_pattern">Password must be at least 6 characters long containing a letter, a number, and a special character(!@#$%^&amp;*)</string>
    <string name="err_msg_confirm_new_password">This does not match the new password</string>
    <string name="err_msg_wrong_password">Wrong password</string>
    <string name="notify_password_changed">Password change successful</string>
    <string name="label_fund_name">Fund Name</string>
    <string name="hint_fund_name">Enter fund name</string>
    <string name="label_percent_allocation">Percent Allocation</string>
    <string name="percent_sign">%</string>
    <string name="hint_percentage">Eg. 50</string>
    <string name="label_total">Total</string>
    <string name="dummy_total_percentage">100%</string>
    <string name="heading_allocation_setting">Fund Allocation Setting</string>
    <string name="hint_change_allocation">Click the fund item to edit</string>
    <string name="btn_delete">Delete</string>
    <string name="dummy_title">Title</string>
    <string name="btn_action">Action</string>
    <string name="title_edit_allocation">Edit Allocation Setting</string>
    <string name="btn_apply">Apply</string>
    <string name="title_add_fund">Add New Fund</string>
    <string name="btn_add">Add</string>
    <string name="err_msg_fund_name_empty">* Fund name cannot be empty\n</string>
    <string name="err_msg_allocation_range">* Allocation percentage must be between 1% to 100%</string>
    <string name="btn_add_fund">Add a Fund</string>
    <string name="err_msg_delete_not_allowed">Deleting fund if there is only one is not allowed</string>
    <string-array name="hour_12">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="minute">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>00</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string-array name="am_pm">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="day">
        <item>SUN</item>
        <item>MON</item>
        <item>TUE</item>
        <item>WED</item>
        <item>THU</item>
        <item>FRI</item>
        <item>SAT</item>
    </string-array>
    <string-array name="date">
        <item>01ST</item>
        <item>02ND</item>
        <item>03RD</item>
        <item>04TH</item>
        <item>05TH</item>
        <item>06TH</item>
        <item>07TH</item>
        <item>08TH</item>
        <item>09TH</item>
        <item>10TH</item>
        <item>11TH</item>
        <item>12TH</item>
        <item>13TH</item>
        <item>14TH</item>
        <item>15TH</item>
        <item>16TH</item>
        <item>17TH</item>
        <item>18TH</item>
        <item>19TH</item>
        <item>20TH</item>
        <item>21ST</item>
        <item>22ND</item>
        <item>23RD</item>
        <item>24TH</item>
        <item>25TH</item>
        <item>26TH</item>
        <item>27TH</item>
        <item>28TH</item>
        <item>29TH</item>
        <item>30TH</item>
        <item>31ST</item>
    </string-array>
    <string-array name="language">
        <item>Filipino</item>
        <item>Esperanto</item>
        <item>Bahasa Melayu</item>
        <item>English</item>
        <item>Klingon</item>
    </string-array>
    <string-array name="currency">
        <item>Philippine Peso</item>
        <item>US Dollar</item>
        <item>Malaysian Ringgit</item>
        <item>British Pound</item>
        <item>Euro</item>
    </string-array>
</resources>
