<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="30dp">

    <TextView
        android:id="@+id/title_fund_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_fund_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/label_fund_name"
        android:textSize="@dimen/txtSize_label"
        app:layout_constraintStart_toStartOf="@+id/title_fund_dialog"
        app:layout_constraintTop_toBottomOf="@+id/title_fund_dialog" />

    <TextView
        android:id="@+id/fund_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/dummy_fund"
        android:textSize="@dimen/txtSize_label"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/label_fund_name"
        app:layout_constraintStart_toStartOf="@+id/input_percent_allocation"
        app:layout_constraintTop_toTopOf="@+id/label_fund_name" />

    <EditText
        android:id="@+id/input_fund_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/hint_fund_name"
        android:imeOptions="actionNext"
        android:inputType="text|textCapWords"
        android:maxLines="1"
        android:textSize="@dimen/txtSize_label"
        app:layout_constraintBottom_toBottomOf="@+id/label_fund_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/label_fund_name" />

    <TextView
        android:id="@+id/label_percent_allocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/label_percent_allocation"
        android:textSize="@dimen/txtSize_label"
        app:layout_constraintEnd_toEndOf="@+id/label_fund_name"
        app:layout_constraintStart_toStartOf="@+id/label_fund_name"
        app:layout_constraintTop_toBottomOf="@+id/input_fund_name" />


    <EditText
        android:id="@+id/input_percent_allocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="center"
        android:hint="@string/hint_percentage"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLines="1"
        android:textSize="@dimen/txtSize_label"
        app:layout_constraintBottom_toBottomOf="@+id/label_percent_allocation"
        app:layout_constraintStart_toStartOf="@+id/input_fund_name"
        app:layout_constraintTop_toTopOf="@+id/label_percent_allocation" />

    <TextView
        android:id="@+id/percent_sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent_sign"
        android:textSize="@dimen/txtSize_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/input_percent_allocation"
        app:layout_constraintStart_toEndOf="@+id/input_percent_allocation" />

    <TextView
        android:id="@+id/err_allocation"
        style="@style/error_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/dummy_err_msg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/label_percent_allocation"
        app:layout_constraintTop_toBottomOf="@+id/label_percent_allocation" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/btn_cancel"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="5dp"
        android:text="@string/btn_cancel"
        android:textColor="@color/btn_text"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_action"
        app:layout_constraintEnd_toStartOf="@+id/btn_action" />

    <Button
        android:id="@+id/btn_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacingTop_fromHeading"
        android:background="@drawable/btn_tag"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:padding="5dp"
        android:text="@string/btn_action"
        android:textColor="@color/btn_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/err_allocation" />

</android.support.constraint.ConstraintLayout>