<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".PasswordSettingFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/heading_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingTop_ofHeading"
            android:text="@string/heading_change_password"
            android:textColor="@color/txtColor_heading"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingTop_fromHeading"
            android:text="@string/label_new_password"
            android:textSize="@dimen/txtSize_label"
            app:layout_constraintStart_toStartOf="@+id/input_new_password"
            app:layout_constraintTop_toBottomOf="@+id/heading_change_password" />

        <EditText
            android:id="@+id/input_new_password"
            android:layout_width="@dimen/width_inputField"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="@dimen/txtSize_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_new_password" />

        <TextView
            android:id="@+id/err_msg_new_password"
            style="@style/error_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/err_password_pattern"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/input_new_password"
            app:layout_constraintStart_toStartOf="@+id/input_new_password"
            app:layout_constraintTop_toBottomOf="@+id/input_new_password" />

        <TextView
            android:id="@+id/label_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingTop_fromHeading"
            android:text="@string/label_confirm_password"
            android:textSize="@dimen/txtSize_label"
            app:layout_constraintStart_toStartOf="@+id/input_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/err_msg_new_password" />

        <EditText
            android:id="@+id/input_confirm_password"
            android:layout_width="@dimen/width_inputField"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_confirm_new_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="@dimen/txtSize_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_confirm_password" />

        <TextView
            android:id="@+id/err_msg_confirm_password"
            style="@style/error_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/err_msg_confirm_new_password"
            app:layout_constraintEnd_toEndOf="@+id/input_confirm_password"
            app:layout_constraintStart_toStartOf="@+id/input_confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/input_confirm_password" />

        <TextView
            android:id="@+id/label_old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingTop_fromHeading"
            android:text="@string/label_current_password"
            android:textSize="@dimen/txtSize_label"
            app:layout_constraintStart_toStartOf="@+id/input_old_password"
            app:layout_constraintTop_toBottomOf="@+id/err_msg_confirm_password" />

        <EditText
            android:id="@+id/input_old_password"
            android:layout_width="@dimen/width_inputField"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/hint_old_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="@dimen/txtSize_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_old_password" />

        <TextView
            android:id="@+id/err_msg_old_password"
            style="@style/error_msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/err_msg_wrong_password"
            app:layout_constraintEnd_toEndOf="@+id/input_old_password"
            app:layout_constraintStart_toStartOf="@+id/input_old_password"
            app:layout_constraintTop_toBottomOf="@+id/input_old_password" />

        <Button
            android:id="@+id/btn_save"
            style="@style/btn_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacingTop_button"
            android:layout_marginBottom="@dimen/spacingBottom_buttonGrp"
            android:enabled="false"
            android:text="@string/btn_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_cancel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/err_msg_old_password" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_save" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>
