<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncomeDetailFragment">

    <TextView
        android:id="@+id/heading_income_logging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacingTop_ofHeading"
        android:text="@string/heading_income_detail"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_source"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacingTop_fromHeading"
        android:text="@string/label_source"
        android:textSize="@dimen/txtsize_label"
        app:layout_constraintStart_toStartOf="@+id/input_income_source"
        app:layout_constraintTop_toBottomOf="@+id/heading_income_logging" />

    <AutoCompleteTextView
        android:id="@+id/input_income_source"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:hint="@string/hint_source"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:maxLines="1"
        android:textSize="@dimen/txtsize_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_source" />

    <TextView
        android:id="@+id/err_msg_from"
        style="@style/error_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_err_msg"
        app:layout_constraintEnd_toEndOf="@+id/input_income_source"
        app:layout_constraintStart_toStartOf="@+id/input_income_source"
        app:layout_constraintTop_toBottomOf="@+id/input_income_source" />

    <TextView
        android:id="@+id/label_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/label_amount"
        android:textSize="@dimen/txtsize_label"
        app:layout_constraintStart_toStartOf="@+id/input_amount"
        app:layout_constraintTop_toBottomOf="@+id/err_msg_from" />

    <com.jamerec.cashflowlogger.PhCurrencyInput
        android:id="@+id/input_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:textSize="@dimen/txtsize_detail"
        app:layout_constraintEnd_toEndOf="@+id/input_income_source"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/input_income_source"
        app:layout_constraintTop_toBottomOf="@+id/label_amount" />

    <TextView
        android:id="@+id/err_msg_amount"
        style="@style/error_msg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dummy_err_msg"
        app:layout_constraintEnd_toEndOf="@+id/input_amount"
        app:layout_constraintStart_toStartOf="@+id/input_amount"
        app:layout_constraintTop_toBottomOf="@+id/input_amount" />

    <Button
        android:id="@+id/btn_allocate_auto"
        style="@style/btn_income_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacingTop_bottonGrp"
        android:text="@string/btn_txt_allocate_auto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/err_msg_amount" />

    <Button
        android:id="@+id/btn_allocate_man"
        style="@style/btn_income_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacingVert_button"
        android:text="@string/btn_txt_allocate_man"
        app:layout_constraintEnd_toEndOf="@+id/btn_allocate_auto"
        app:layout_constraintStart_toStartOf="@+id/btn_allocate_auto"
        app:layout_constraintTop_toBottomOf="@+id/btn_allocate_auto" />

    <Button
        android:id="@+id/btn_cancel"
        style="@style/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacingVert_button"
        android:text="@string/btn_cancel"
        app:layout_constraintEnd_toEndOf="@+id/btn_allocate_man"
        app:layout_constraintStart_toStartOf="@+id/btn_allocate_man"
        app:layout_constraintTop_toBottomOf="@+id/btn_allocate_man" />

</android.support.constraint.ConstraintLayout>